lingtypology 1.0.8
- add argument "density.control" to function map.feature().
- add argument "label.emphasize" to function map.feature().

lingtypology 1.0.7 (15.09.2017)
 - add argument "zoom.level" to function map.feature().
 - colour repetition bug corrected. Issue #18
 - NA bug in stroke.features corrected. Issue #19
 - add arguments for rectangle (rectangle.lng, rectangle.lat, rectangle.color)

lingtypology 1.0.6 (16.08.2017)
 - all functions that takes iso or glottolog codes from user remove spaces and punctuation marks. So users can make mistakes (like lang.gltc('icel1247   ') or lang.gltc('icel1247,')), but functions will ignore them. (Thanks @macleginn for this idea)
 - add argument "official" to function lang.country()
 - add function phoible.feature() for downloading PHOIBLE data
 - add function wals.feature() for downloading WALS data
 - add function afbo.feature() for downloading AfBo data
 - add function sails.feature() for downloading SAILS data
 - add function abvd.feature() for downloading ABVD data

lingtypology 1.0.5 (21.06.2017)
 - coloring bug corrected
 - add function autotyp.feature() for downloading AUTOTYP data
 - density estimation arguments works with independent features

lingtypology 1.0.4 (13.05.2017)
  - glottolog database is improved
  - added warning for languages without coordinates
  - label.hide option terned to TRUE
  - added density estimation visualization
  - transfered to ropensci

lingtypology 1.0.3 (14.04.2017)
  - improved spellchecker
  - added the argument for zoom panel appearence
  - added some official languages to the countries dataset
  - added instructions for using dplyr with lingtypology
  - glottolog databases are improved
  - added search by alternative language names to is.glottolog() function
  - makelink changed to make.url; link creation improved (Thanks  @languageSpaceLabs and @tzakharko for the comments)
  - added numeric features processing (Thanks  @languageSpaceLabs and @tzakharko for the comments)