@@ -5,6 +5,7 @@ Version: 1.0.7
 Depends: R (>= 3.1.0)
 Imports:
     leaflet,
+    leaflet.minicharts,
     stats,
     utils,
     stringdist,
