@@ -42,6 +42,7 @@ importFrom(leaflet,labelOptions)
 importFrom(leaflet,layersControlOptions)
 importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOptions)
+importFrom(leaflet.minicharts,addMinicharts)
 importFrom(magrittr,"%>%")
 importFrom(rowr,cbind.fill)
 importFrom(sp,Polygons)
